# agent-failure

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  docker-compose.yml  main.py  package-lock.json  pyproject.toml
.artifacts/: runtime-image-build.env  runtime-image-release.env  runtime-image-scan.txt
alembic/: env.py
alembic/versions/: 262fcc2fbf0d_create_session_lifecycle_tables.py  4c7b79bbf30e_add_session_metadata_columns_to_the_.py  6f1cdf1d1bb0_add_worker_heartbeats_table.py  7732ce45a984_add_trace_events_table_for_event_tracing.py  8c00b94f5c9f_add_runtime_id_to_sessions.py  8d4173a2da0c_add_evaluator_results_table.py  d40d5ef1b1ef_change_idempotency_key_columns_to_.py  d5e238bc5d10_baseline_schema.py  faa5264afd76_add_idempotency_records_table.py
apps/frontend/: package-lock.json  package.json
apps/orchestrator/: ports.py  types.py
docs/execution/: a-v1-epics-and-tickets.md  b-backlog-tickets.md  backlog-tickets-P0-deferred.md  backlog-tickets-P1-deferred.md  backlog-tickets-P1.md  backlog-tickets-P2.md  current-plan.md  execution-plan.md  p2-ea-t3-runtime-smoke-runbook.md  v1-epics-and-tickets-active.md  v1-epics-completed.md  v1-epics-product-viability-in-progress.md
docs/prd/: product-requirements-document.md
docs/specs/: a-discussion.md  a-session-lifecycle-and-state-machine-specification.md  b-api-and-websocket-contract-specification.md  c-authorization-and-permission-model-specification.md  (+4 more)
scripts/: build_runtime_image.sh  push_runtime_image.sh  scan_runtime_image.sh  smoke_agent_harness_gateway.py  smoke_session_runtime_roundtrip.py  validate_runtime_lock.sh
(+154 files in other folders)
