[project]
name = "agent-failure"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.48",
]

[dependency-groups]
dev = [
    "alembic>=1.18.4",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "psycopg[binary]>=3.3.3",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.5",
]

[tool.pytest.ini_options]
pythonpath = ["."]
